--- a/frontenddashboardapp/src/App.css
+++ b/frontenddashboardapp/src/App.css
@@ -157,3 +157,19 @@ button {
     font-size: 14px !important;
   }
 }
+
+.centre{
+  text-align: center;
+}
+
+.larg{
+  justify-content: space-between;
+}
+.total{
+  width: 100%;
+  padding: 3px;
+}
+.marge{
+  padding-left: 5px;
+  padding-right: 5px;
+}
